--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "calculator",
-  "version": "1.0.0",
+  "name": "zs01-cml-calculator",
+  "version": "1.2.1",
   "type": "module",
   "description": "Simple calculator program.",
   "main": "calc.js",
+  "bin": "calc.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "calculator"
   ],
-  "author": "shah",
+  "author": "zshah",
   "license": "ISC"
 }
